# asciify

./: .gitignore  CHANGELOG.md  LICENSE  README.md  asciify.cabal
app/: 5boxes.txt  Main.hs  alphabet.txt
app/Asciify/: Picture.hs  Text.hs
