cabal-version:      2.4
name:               asciify
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Oleh Marakhovskyi
maintainer:         oleg.marakhovsky@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable asciify
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Asciify.Picture,
                   Asciify.Text

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16,
                      vector ^>=0.13.1,
                      JuicyPixels ^>=3.3.8
    hs-source-dirs:   app
    default-language: Haskell2010
